# M3C

./: .borrar  LICENCE.lib-sh  LICENCE.libmsym  LICENSE  LICENSE.scift  M3Cvars.sh  Makefile  NEWS  README  README.md  doxyfile
docs/: _config.yml  index.html
src/: AzizSlamanPotential.f90  Fragment.f90  FragmentsDB.f90  FragmentsList.f90  FragmentsListBase.f90  GOptions.f90  GOptionsM3C.f90  M3C-adf.freqs  M3C-adf.optg  M3C-gamess.freqs  M3C-gamess.geniso  M3C-gamess.iener  M3C-gamess.optg  M3C-gaussian.freqs  M3C-gaussian.geniso  M3C-gaussian.genpot  M3C-gaussian.iener  M3C-gaussian.optg  M3C-gaussian.symmetrize  M3C-lammps.optg  M3C-latte.freqs  M3C-latte.optg  M3C-molpro.optdb  M3C-nwchem.freqs  M3C-nwchem.optg  M3C.analysis  M3C.analysis.CCC  M3C.analysis.paperC5  M3C.analysis.ubuntu12  M3C.analysis.ubuntu14  M3C.check  M3C.checkIsomers  M3C.difference  M3C.f90  M3C.fragments  M3C.fragments.new  M3C.freqs.removeFAILURES  M3C.freqs.removeIMAGFREQS  M3C.intersection  M3C.makeDB  (+28 more)
templates/: C5.m3c  b3lyp.freqs-GAUSSIAN.inp  b3lyp.freqs-NWCHEM.inp  b3lyp.freqs0-GAUSSIAN.inp  b3lyp.ircB-GAUSSIAN.inp  b3lyp.ircR-GAUSSIAN.inp  b3lyp.optg-GAUSSIAN.inp  b3lyp.optg-NWCHEM.inp  b3lyp.optg0-GAMESS.inp  b3lyp.optg0-GAUSSIAN.inp  b3lyp.optgTS-GAUSSIAN.inp  buckcoul.optg-LAMMPS.inp  buckcoul.optg-LAMMPS.lmp  ccsdt.iener-GAUSSIAN.inp  dftb.freqs-ADF.inp  dftb.optg-ADF.inp  latte.in  latte.optg-LAMMPS.inp  pbe.freqs-ADF.inp  pbe.freqs-AMS_BAND.inp  (+7 more)
utils/libmsym/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  molecule.symmetrize.c  msym_EXPORTS.h  point_group.c
(+302 files in other folders)
